[gd_scene load_steps=27 format=2]

[ext_resource path="res://scene/main/InitWorld.gd" type="Script" id=1]
[ext_resource path="res://scene/gui/MainGui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/main/PcAction.gd" type="Script" id=3]
[ext_resource path="res://scene/main/RootScene.gd" type="Script" id=4]
[ext_resource path="res://scene/main/Schedule.gd" type="Script" id=5]
[ext_resource path="res://library/HarborHelper.gd" type="Script" id=6]
[ext_resource path="res://scene/main/DungeonBoard.gd" type="Script" id=7]
[ext_resource path="res://library/InitWorldHelper.gd" type="Script" id=8]
[ext_resource path="res://scene/main/RemoveObject.gd" type="Script" id=9]
[ext_resource path="res://scene/main/ReloadGame.gd" type="Script" id=10]
[ext_resource path="res://scene/main/RandomNumber.gd" type="Script" id=11]
[ext_resource path="res://scene/main/PlayerInput.gd" type="Script" id=12]
[ext_resource path="res://library/FindObject.gd" type="Script" id=13]
[ext_resource path="res://library/NodeHelper.gd" type="Script" id=14]
[ext_resource path="res://scene/main/ActorAction.gd" type="Script" id=16]
[ext_resource path="res://scene/main/EndGame.gd" type="Script" id=17]
[ext_resource path="res://scene/main/AutoStart.gd" type="Script" id=18]
[ext_resource path="res://scene/main/GameProgress.gd" type="Script" id=20]
[ext_resource path="res://scene/main/CreateObject.gd" type="Script" id=21]
[ext_resource path="res://scene/main/GameSetting.gd" type="Script" id=22]
[ext_resource path="res://scene/main/SwitchScreen.gd" type="Script" id=23]
[ext_resource path="res://scene/main/HelpInput.gd" type="Script" id=24]
[ext_resource path="res://scene/gui/HelpGui.tscn" type="PackedScene" id=25]
[ext_resource path="res://scene/main/Palette.gd" type="Script" id=26]
[ext_resource path="res://scene/gui/DebugGui.tscn" type="PackedScene" id=29]
[ext_resource path="res://scene/main/DebugInput.gd" type="Script" id=30]

[node name="RootScene" type="Node2D"]
script = ExtResource( 4 )

[node name="MainGui" parent="." instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 580.0
mouse_filter = 2

[node name="HelpGui" parent="." instance=ExtResource( 25 )]
margin_left = 40.0
margin_top = 40.0
margin_right = 760.0
margin_bottom = 560.0
mouse_filter = 2

[node name="DebugGui" parent="." instance=ExtResource( 29 )]
mouse_filter = 2

[node name="AutoStart" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="InitWorld" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="InitWorldHelper" type="Node2D" parent="InitWorld"]
script = ExtResource( 8 )

[node name="NodeHelper" type="Node2D" parent="InitWorld"]
script = ExtResource( 14 )

[node name="FindObject" type="Node2D" parent="InitWorld"]
script = ExtResource( 13 )

[node name="PlayerInput" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="ReloadGame" type="Node2D" parent="PlayerInput"]
script = ExtResource( 10 )

[node name="PcAction" type="Node2D" parent="PlayerInput"]
script = ExtResource( 3 )

[node name="NodeHelper" type="Node2D" parent="PlayerInput"]
script = ExtResource( 14 )

[node name="FindObject" type="Node2D" parent="PlayerInput"]
script = ExtResource( 13 )

[node name="HelpInput" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="DebugInput" type="Node2D" parent="."]
script = ExtResource( 30 )

[node name="Schedule" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ActorAction" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="GameSetting" type="Node2D" parent="."]
script = ExtResource( 22 )

[node name="DungeonBoard" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="CreateObject" type="Node2D" parent="."]
script = ExtResource( 21 )

[node name="RemoveObject" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="RandomNumber" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="SwitchScreen" type="Node2D" parent="."]
script = ExtResource( 23 )

[node name="GameProgress" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="FindObject" type="Node2D" parent="GameProgress"]
script = ExtResource( 13 )

[node name="NodeHelper" type="Node2D" parent="GameProgress"]
script = ExtResource( 14 )

[node name="HarborHelper" type="Node2D" parent="GameProgress"]
script = ExtResource( 6 )

[node name="EndGame" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="Palette" type="Node2D" parent="."]
script = ExtResource( 26 )
